# khomputer

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  tox.ini
src/khomputer/: cli.py  date.py  interpreter.py  number.py  transpiler.py
tests/test_interpreter/: test_interpreter.py
tests/test_transpiler/: test_transpiler.py
