[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "khomputer"
authors = [
    {name="Panyut Sriwirote", email="panyutsriwirote@gmail.com"}
]
description = "The Khomputer programming language"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "pythaidate"
]

[project.urls]
Repository = "https://github.com/panyutsriwirote/khomputer"
Issues = "https://github.com/panyutsriwirote/khomputer/issues"
Documentation = "https://panyutsriwirote.github.io/khomputer"

[project.scripts]
khomputer = "khomputer.cli:main"

[tool.setuptools.dynamic]
version = {attr = "khomputer.cli.__VERSION__"}
